--- a/css/style.css
+++ b/css/style.css
@@ -38,14 +38,20 @@ a {
       background-image: url(../img/bg3.jpg); }
     #wrap .bg li:nth-of-type(4) {
       background-image: url(../img/bg4.jpg); }
+    #wrap .bg li:nth-of-type(5) {
+      background-image: url(../img/bg5.jpg); }
+    #wrap .bg li:nth-of-type(6) {
+      background-image: url(../img/bg6.jpg); }
+    #wrap .bg li:nth-of-type(7) {
+      background-image: url(../img/bg7.jpg); }
   #wrap .swiper-wrapper {
     width: 100%;
     height: 100%; }
     #wrap .swiper-wrapper .swiper-slide {
       width: 60vw;
-      height: 60vh;
+      height: 80vh;
       position: relative;
-      top: 20vh; }
+      top: 10vh; }
       #wrap .swiper-wrapper .swiper-slide .inner {
         width: 100%;
         height: 100%;
@@ -61,14 +67,14 @@ a {
         opacity: 1; }
   #wrap .swiper-button-next {
     top: auto;
-    bottom: 5vh;
+    bottom: 3vh;
     right: 10vw;
     transform: scale(0.5);
     filter: brightness(0%);
     opacity: 0.7; }
   #wrap .swiper-button-prev {
     top: auto;
-    bottom: 5vh;
+    bottom: 3vh;
     left: auto;
     right: calc(10vw + 50px);
     transform: scale(0.5);
@@ -77,7 +83,7 @@ a {
   #wrap .swiper-pagination {
     position: absolute;
     right: 10vw;
-    top: 10vh;
+    top: 5vh;
     left: auto;
     bottom: auto;
     width: auto; }
